[project]
name = "pyrast"
version = "0.1.0"
readme = "README.rst"
keywords = ["adsorption", "thermodynamics", "isotherm"]
requires-python = ">=3.6"
license = {file = "LICENSE"}
authors = [
    {name = "Jonah Finkelstein", email = "jonahfinkelstein2030@u.northwestern.edu"}
]
dependencies = [
    "numpy",
    "scipy",
    "pandas",
    "matplotlib",
]

[project.optional-dependencies]
all = ["pyrast[dev,docs,test]"]
dev = [
    "pyrast[test,docs]",
    "ruff",
    "ipykernel",
]
docs = [
    "sphinx",
    "sphinx-rtd-theme",
]
test = [
    
]


[tool.ruff]
target-version = "py314"
line-length = 88

[tool.ruff.lint]
extend-select = [
    "F",        # Pyflakes rules
    "W",        # PyCodeStyle warnings
    "E",        # PyCodeStyle errors
    "I",        # Sort imports properly
    "UP",       # Warn if certain things can changed due to newer Python versions
    "C4",       # Catch incorrect use of comprehensions, dict, list, etc
    "FA",       # Enforce from __future__ import annotations
    "ISC",      # Good use of string concatenation
    "ICN",      # Use common import conventions
    "RET",      # Good return practices
    "SIM",      # Common simplification rules
    "TID",      # Some good import practices
    "TC",       # Enforce importing certain types in a TYPE_CHECKING block
    "PTH",      # Use pathlib instead of os.path
    "TD",       # Be diligent with TODO comments
    "NPY",      # Some numpy-specific things
    "COM",      # enforce trailing comma rules
    "DTZ",      # require strict timezone manipulation with datetime
    "FBT",      # detect boolean traps
    "N",        # enforce naming conventions, e.g. ClassName vs function_name
    "A",        # detect shadowed builtins
    "BLE",      # disallow catch-all exceptions
    "S",        # disallow things like "exec"
]

[tool.ruff.format]
quote-style = "single"
indent-style = "space"

[build-system]
requires=["setuptools"]
build-backend = "setuptools.build_meta"
